--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.13.7",
     "@parcel/transformer-raw": "^2.9.2"
   }
 }
